install_data(
	'polaris12_32_mc.bin',
	'polaris12_ce_2.bin',
	'polaris12_ce.bin',
	'polaris12_k_mc.bin',
	'polaris12_k_smc.bin',
	'polaris12_mc.bin',
	'polaris12_me_2.bin',
	'polaris12_me.bin',
	'polaris12_mec_2.bin',
	'polaris12_mec.bin',
	'polaris12_mec2_2.bin',
	'polaris12_mec2.bin',
	'polaris12_pfp_2.bin',
	'polaris12_pfp.bin',
	'polaris12_rlc.bin',
	'polaris12_sdma.bin',
	'polaris12_sdma1.bin',
	'polaris12_smc.bin',
	'polaris12_uvd.bin',
	'polaris12_vce.bin',
	'tahiti_ce.bin',
	'tahiti_k_smc.bin',
	'tahiti_mc.bin',
	'tahiti_me.bin',
	'tahiti_pfp.bin',
	'tahiti_rlc.bin',
	'tahiti_smc.bin',
	'tahiti_uvd.bin',
	'verde_ce.bin',
	'verde_k_smc.bin',
	'verde_mc.bin',
	'verde_me.bin',
	'verde_pfp.bin',
	'verde_rlc.bin',
	'verde_smc.bin',
	install_dir: join_paths(get_option('prefix'), 'firmware'),
)
